add user CRUD endpoints
